# django-vue-base

./: .env.example  .gitignore  README.md  docker-compose.common.yml  docker-compose.server.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  resources.txt
compose/local/django/: Dockerfile
compose/local/vite/: Dockerfile
compose/test/django/: Dockerfile
services/backend/: manage.py
services/backend/core/: settings.py  urls.py
services/backend/core/models/: base.py
services/backend/core/settings/: base.py  test.py
services/backend/core/templates/: base.html
services/backend/core/views/: base.py  example.py
services/backend/templates/: base.html
services/backend/user/: admin.py
services/backend/user/migrations/: 0001_initial.py
services/backend/user/models/: user.py
services/backend/user/serializers/: user.py
services/backend/user/tests/: factories.py  test_user.py
services/frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
services/frontend/src/: App.vue  main.ts
services/frontend/src/components/: 404.vue  Hello.vue  HelloWorld.vue  NotFound.vue  props.ts
services/frontend/src/components/__tests__/: README.md
services/frontend/src/stores/: README.md
services/frontend/src/types/: auth.ts  base.ts
