[tool.poetry]
name = "your-project-name"
version = "0.0.1"
description = "YOUR_PROJECT_DESCRIPTION"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "your_project_name"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
djangorestframework = "^3.14.0"
django-vite = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
